// /proto/services/greeter/v1/greeter.proto
syntax = "proto3";

package services.greeter.v1;

option go_package = "github.com/kylesmartin/grpc-demo/client/greeter";

// The greeting service definition.
service GreeterService {
    // Sends a greeting
    rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
  }
  
  // The request message containing the user's name.
  message SayHelloRequest {
    string name = 1;
  }
  
  // The response message containing the greetings
  message SayHelloResponse {
    string message = 1;
}
